src/css/projects.css
nav a {
  color: #666666;
}

nav a.active {
  color: #000000;
  font-weight: 700;
  transition: all 0.2s;
  scroll-margin: 20px;
}

body {
  grid-template-rows: unset;
  height: unset;
}

div.content {
  grid-column: 3 / -3;
  display: grid;
  grid-template-columns: subgrid;
}

.projectTitle {
  position: sticky;
  margin-top: 14px;
  top: 34px;
  grid-column: 1 / -1;
  font-family: ArialBold, sans-serif;
  line-height: 120%;
  text-transform: uppercase;
  font-size: var(--title-size);
  z-index: 99;
  mix-blend-mode: difference;
  color: #ffffff;
  display: flex;
  justify-content: center;
  margin-bottom: 4em;
  height: 3em;
  grid-row: 1;
}

.projectTitle > .bt {
  opacity: 0;
}

.projectTitle.first {
  height: 0;
  margin-bottom: 0;
  margin-top: 0;
}

.projectTitle.first > .bt {
  opacity: 1;
}

.projectTitle > .projectName {
  display: inline-block;
  white-space: nowrap;
  width: 0;
}

p {
  font-size: 11px;
  font-family: Helvetica, sans-serif;
  font-weight: 400;
  line-height: 120%;
  text-transform: uppercase;
}

.subtitle {
  font-size: 11px;
  font-family: Helvetica, sans-serif;
  font-weight: 700;
  line-height: 120%;
  text-transform: uppercase;
  color: #000000;
}

span.caption {
  font-size: var(--body-text-size);
  font-family: times-new-roman, serif;
  color: #ffffff;
  mix-blend-mode: difference;
  grid-column: 1 / -1;
  grid-row: 1;
  justify-self: right;
  align-self: end;
  position: relative;
  bottom: calc(var(--caption-overhang-y) + var(--body-text-size) / 2);
  right: calc(var(--caption-overhang-x) * -1);
  height: 0;

  z-index: 99999;
}

article {
  grid-column: 1 / -1;
}

/*
We can't use subgrid here because the main project container
must be a block element so the position sticky works correctly.
So here we're creating another grid with the same column widths
as the main body grid, just fewer of them.
*/
article div.projectContent {
  display: grid;
  grid-template-columns: repeat(16, calc(calc(100vw - 40px) / 20));
}

article div.copy {
  grid-column-start: 1;
  grid-column-end: 5;
  grid-row: 1;
  position: sticky;
  top: calc(50vh + var(--title-size));
  transform: translateY(calc(-50% - var(--title-size)));
  align-self: start;
  margin-bottom: 50em;
  background-color: #ffffff;
}

article div.copy p {
  pointer-events: none;
}

article div.imagery {
  display: grid;
  grid-template-columns: subgrid;
  grid-column-start: 9;
  grid-column-end: 17;
  grid-row: 1;
  cursor: grab;
}

article div.imagery > div {
  height: 77vh;
}

div.clipBox {
  overflow: hidden;
  width: 100%;
  height: 100%;
  grid-row: 1 / -1;
  grid-column-start: 1;
  grid-column-end: 9;
}

div.blurBorderImage {
  display: grid;
  grid-template-columns: subgrid;
  grid-column-start: 1;
  grid-column-end: 9;
  align-items: center;
  justify-items: center;
}

div.blurBorderImage > :first-child > * {
  filter: blur(40px);
  align-self: center;
  transform: scale(120%);
  max-height: 77vh;
}

div.blurBorderImage > :first-child > * {
  height: 100%;
}

div.blurBorderImage > :nth-child(2) {
  grid-row: 1;
  grid-column-start: 2;
  grid-column-end: 8;
  width: 100%;
  z-index: 50;
  align-self: center;
}

div.blurBorderImage.fullWidth > img:nth-child(2) {
  grid-column: 1/-1;
}

div.fullWidthImage {
  grid-column-start: 1;
  grid-column-end: 9;
  width: 100%;
  height: 100%;
  display: grid;
  grid-template-columns: subgrid;
  align-items: center;
}

div.fullWidthImage > :first-child {
  width: 100%;
  grid-row: 1;
  grid-column-start: 1;
  grid-column-end: 9;
}

div.videoWithBackgroundImage {
  display: grid;
  grid-template-columns: subgrid;
  align-items: center;
  grid-column-start: 1;
  grid-column-end: 9;
}

div.videoWithBackgroundImage > :first-child > * {
  width: 100%;
}

div.videoWithBackgroundImage > video {
  grid-row: 1;
  grid-column-start: 1;
  grid-column-end: 9;
  width: 100%;
}

.heroButton {
  padding-bottom: 10px;
  height: var(--hero-button-height);
  display: inline-block;
  mix-blend-mode: difference;
}

.heroButton svg {
  mix-blend-mode: difference;
}

.heroButton svg .icon {
  fill: #ffffff;
  animation: fadeInOut 1s ease-in-out alternate-reverse infinite;
}

.heroButton svg .text {
  fill: #ffffff;
}

.heroButton svg .edge {
  stroke: #ffffff;
  stroke-linecap: round;
  stroke-dasharray: 2 10;
  transition: stroke-dasharray 1s;
}

.heroButton svg:hover .edge {
  stroke-dasharray: 10 10;
}

@keyframes fadeInOut {
  to {
    opacity: 0;
  }
}

#tempImageryPadding {
  grid-column: 1 / -1;
  height: 120px;
  width: 100%;
  margin-top: -20px;
}

@media screen and (orientation: portrait) {
  :root {
    --title-size: 18px;
  }

  body {
    padding-top: 0;
    grid-template-rows: calc(100dvh - 50px - 30px - 40px) 50px 30px;
    width: calc(100dvw - 40px);
    height: calc(100dvh - 40px);
    align-items: unset;
  }

  nav {
    box-shadow: 0 -10px 20px -5px rgba(115, 115, 115, 0.5);
    grid-row: 2;
  }

  article {
    flex-shrink: 0;
    scroll-margin-left: 20px;
  }

  .projectTitle {
    position: sticky;
    left: 36px;
    top: 46px;
    margin-right: 20px;
    margin-left: 20px;
  }

  .projectTitle.first {
    position: fixed;
    top: 40px;
    left: 40px;
    right: unset;
    white-space: nowrap;
    margin-left: 0;
  }

  .projectTitle > .projectName {
    width: auto;
  }

  div.content {
    display: flex;
    grid-row: 1;
    grid-column: 1 / -1;
    width: 100dvw;
    height: calc(100dvh - 50px - 30px - 40px);
    margin-left: -20px;
    overflow-x: scroll;
    overflow-y: clip;
    position: relative;
    scrollbar-width: none;
  }

  article div.projectContent {
    display: grid;
    grid-template: 1fr / 1fr;
    place-items: start;
    height: calc(100dvh - 50px - 30px - 40px);
    justify-content: flex-start;
    width: 100%;
    position: relative;
  }

  article div.projectContent > * {
    grid-column: 1 / 1;
    grid-row: 1 / 1;
  }

  div.projectContent > div.floatContainer {
    width: calc(100dvw - 40px);
    height: calc(100dvh - 50px - 30px - 40px - 50px);
    position: sticky;
    left: 20px;
    bottom: 0;
    flex-shrink: 0;
    z-index: 999;
  }

  article div.imagery {
    transform: unset;
    display: flex;
    height: calc(100dvh - 50px - 30px - 40px - 50px);
    overflow: hidden;
  }

  article div.imagery > div {
    height: calc(100dvh - 50px - 30px - 40px - 50px);
    width: calc(100dvw - 40px);
    flex-shrink: 0;
    overflow: hidden;
    position: relative;
    grid-template-columns: repeat(10, calc((100dvw - 40px) / 10));
  }

  div.blurBorderImage > :first-child {
    grid-row: 1;
    grid-column: 1 / -1;
  }

  div.blurBorderImage > :nth-child(2) {
    grid-row: 1;
    grid-column-start: 2;
    grid-column-end: 10;
    width: 100%;
    z-index: 50;
    align-self: center;
  }

  div.clipBox {
    grid-column: 1 / -1;
  }

  div.videoWithBackgroundImage > :first-child > * {
    grid-column: 1 / -1;
  }

  div.videoWithBackgroundImage > video {
    grid-column: 1 / -1;
  }

  div.videoWithBackgroundImage > :first-child > * {
    height: 100%;
  }

  div.fullWidthImage > :first-child {
    grid-column: 1 / -1;
    height: 100%;
    object-fit: cover;
    object-position: center;
  }

  span.caption {
    right: 20px;
    z-index: 99;
    grid-row: 1;
    grid-column: 1 / -1;
    justify-self: end;
    align-self: end;
  }

  article div.copy {
    transform: translateY(calc(100% - 50px));
    transition: transform 0.5s ease-in-out;
    position: sticky;
    left: 20px;
    top: unset;
    bottom: 0;
    margin-bottom: unset;
    padding-top: 10px;
    padding-left: 20px;
    padding-right: 20px;
    width: calc(100vw - 80px);
    background-color: #ffffff;
    z-index: 999;
    align-self: end;
    flex-shrink: 0;
    cursor: pointer;
  }

  article div.copy.open {
    transform: none;
  }

  .heroButton {
    position: sticky;
    left: 40px;
    bottom: 50px;
    align-self: flex-end;
    z-index: 99;
    margin-left: 20px;
    margin-right: 20px;
  }

  #tempImageryPadding {
    grid-row: 1;
    width: 20px;
    height: calc(100dvh - 50px - 30px - 40px - 50px);
    object-fit: cover;
    margin-top: 0;
    transform: scaleX(2) translateX(-25%);
  }

  span.bt {
    display: none;
  }

  h1.first > span.bt {
    display: unset;
  }
}

